<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddSupplementaryActivity">

    <com.example.administrator.myapplication.common.view.TopView
        android:id="@+id/tv_add_supplementary_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="bottom"
        app:is_back="true"
        app:title="@string/add_supplementary"
        app:title_color="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitesmoke"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/y10"
        android:paddingStart="@dimen/x45"
        android:paddingTop="@dimen/y10"
        android:text="@string/title"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/y15"
        android:paddingTop="@dimen/y15"
        android:orientation="horizontal"
        android:paddingStart="@dimen/x45">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_add_supplementary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:hint="@string/input"
            android:paddingEnd="@dimen/x50"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitesmoke"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/y10"
        android:paddingStart="@dimen/x45"
        android:text="@string/img"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_add_supplementary"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y200"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y100"
            android:background="@drawable/bg_id"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y15"
            android:text="@string/img" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitesmoke">

        <Button
            android:id="@+id/bt_supplementary"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y135"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/y40"
            android:layout_marginEnd="@dimen/x45"
            android:layout_marginStart="@dimen/x45"
            android:layout_marginTop="@dimen/y40"
            android:background="@drawable/ic_login_bt"
            android:text="@string/confirm"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>